# Deadlock-Simulator

./: OS Sem Project PPT.pptx  OS_Project_Report.docx  README.md
DeadlockSim/: DeadlockSim.pro  README.md
DeadlockSim/include/: Detection.h  MainWindow.h  RAGWidget.h
DeadlockSim/src/: Detection.cpp  RAGWidget.cpp  main.cpp
OS Project/: OS_Project_Report.docx
OS Project/DeadlockSim/: CMakeLists.txt
OS Project/DeadlockSim/include/: Banker.h  Recovery.h
OS Project/DeadlockSim/src/: Banker.cpp  MainWindow.cpp  Recovery.cpp
